--- a/BattleshipsSimulation/Pages/Index.razor
+++ b/BattleshipsSimulation/Pages/Index.razor
@@ -1,9 +1,59 @@
 ﻿@page "/"
+@using BattleshipsSimulation.Models
+<div class="row">
+    <div class="col-sm text-center">
+        <h4>Player1 ships</h4>
 
-<PageTitle>Index</PageTitle>
+        <table class="table table-bordered">
+            @for (int i = 1; i <= 10; i++)
+            {
+                <tr>
+                    @for (int j = 1; j <= 10; j++)
+                    {
+                        <td class="ship-tile @(Player1.Cells.First(x => x.X == i && x.Y == j).IsEmpty == false ? "red" : "yellow")">
+                            <div style="width:35px;height:35px;">@Player1.Cells.First(x => x.X == i && x.Y == j).IsEmpty</div>
+                        </td>
+                    }
+                </tr>
+            }
+        </table>
 
-<h1>Hello, world!</h1>
+    </div>
+    <div class="col-sm text-center">
+        <h4>Player2 ships</h4>
 
-Welcome to your new app.
+        <table class="ship-board">
+            @for (int i = 1; i <= 10; i++)
+            {
+                <tr>
+                    @for (int j = 1; j <= 10; j++)
+                    {
+                        <td class="ship-tile @(Player2.Cells.First(x => x.X == i && x.Y == j).IsEmpty == false ? "yellow" : "red")">
+                            <div style="width:35px;height:35px;">@Player2.Cells.First(x => x.X == i && x.Y == j).IsEmpty</div>
+                        </td>
+                    }
+                </tr>
+            }
+        </table>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    </div>
+</div>>
+
+
+
+
+
+@code {
+    Player Player1 { get; set; }
+    Player Player2 { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        Player1 = new Player();
+        Player2 = new Player();
+
+        await GameMechanics.DataGenerator.GenerateBoard(Player1);
+        await GameMechanics.DataGenerator.GenerateBoard(Player2);
+    }
+
+}
