fixing view. Important! need to fix shooting mechanics

--- a/BattleshipsSimulation/Pages/Index.razor
+++ b/BattleshipsSimulation/Pages/Index.razor
@@ -10,7 +10,7 @@
                 <tr>
                     @for (int j = 1; j <= 10; j++)
                     {
-                        <td class="ship-tile @(Player1.Cells.First(x => x.X == i && x.Y == j).IsHit == false ? "red" : "yellow")">
+                        <td class="ship-tile @(Player1.Cells.First(x => x.X == i && x.Y == j).IsHit == false ? "blue" : "red")">
                             <div style="width:35px;height:35px;">@Player1.Cells.First(x => x.X == i && x.Y == j).IsShip</div>
                         </td>
                     }
@@ -28,7 +28,7 @@
                 <tr>
                     @for (int j = 1; j <= 10; j++)
                     {
-                        <td class="ship-tile @(Player2.Cells.First(x => x.X == i && x.Y == j).IsShip == false ? "yellow" : "red")">
+                        <td class="ship-tile @(Player2.Cells.First(x => x.X == i && x.Y == j).IsEmpty == false ? "blue" : "black")">
                             <div style="width:35px;height:35px;">@Player2.Cells.First(x => x.X == i && x.Y == j).IsShip</div>
                         </td>
                     }
