--- a/BattleshipsSimulation/wwwroot/css/app.css
+++ b/BattleshipsSimulation/wwwroot/css/app.css
@@ -80,12 +80,14 @@ a, .btn-link {
     background-color: red !important;
     color: snow !important;
     font-weight: bold;
+    font-size: 18px;
 }
 
 .miss {
     background-color: black !important;
     color: snow !important;
     font-weight: bold;
+    font-size: 14px;
 }
 
 .blue {
